--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.27",
     "@fortawesome/free-solid-svg-icons": "^5.12.1",
     "@fortawesome/react-fontawesome": "^0.1.9",
+    "ag-grid-community": "^23.0.1",
+    "ag-grid-react": "^23.0.0",
     "axios": "^0.19.2",
     "bootstrap": "4.3.1",
     "chart.js": "2.7.2",
